Fix cohort popover CSS to scroll overflow

--- a/varify/static/stylesheets/scss/style.scss
+++ b/varify/static/stylesheets/scss/style.scss
@@ -113,7 +113,7 @@ body, #concept-panel, #context-panel {
         max-width: 200px;
     }
 
-    .popover-content > div {
+    .popover-content > ul {
         max-height: 200px;
         overflow-y: scroll;
     }
